dev/react-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-chat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
      - name: frontend
        image: yuni2/react-chat:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "2000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-chat-service
spec:
  selector:
    app: chat-frontend
  ports:
  - port: 3000
    targetPort: 3000
