dev/react-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: yuni2/react-frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "2000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend
  ports:
  - port: 3000
    targetPort: 3000
